run autocompact from an event, to unwind the stack, r=standard8, bug 605511